# FastAPI_AI_chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  init-auth-user.sh  pyproject.toml  pyproject.toml.prod  requirements.txt  start_project.sh
app/: lifespan.py  main.py
app/api/admin/: experiment.py  invite.py  role.py  statistics.py
app/api/v1/: conversation.py  convertion.py  fact.py  message.py  prompts.py  tools.py  upload.py  users.py
app/api/v2/: ai_analysis.py  analysis.py  conversation.py  convertion_v2.py  document.py  fact.py  head_hunter.py  invite.py  message.py  prompt.py  task.py  upload.py  users.py  vacancy.py  vacancy_analysis.py
app/api/v3/: convertion_v3.py
app/application/dto/: stream.py
app/application/exceptions/: analysis.py  auth.py  base.py  conversation.py  document.py  llm.py  prompt.py  user.py  vacancy.py
app/application/prompts/: analysis.py  base.py
app/application/schemas/: auth.py  conversation.py  document.py  fact.py  invites.py  prompt.py  user.py  vacancy.py  vacancy_analysis.py
app/application/services/: auth_service.py  conversation_service.py  document_service.py  invite_service.py  message_service.py  prompt_service.py  user_service.py
app/auth/: __init__.py  dependencies.py  hashing.py  jwt_config.py  tokens.py
app/configs/: celery_config.py  llm_config.py  memory.py  settings.py
app/configs/llms/: base.py  openai.py
app/database/: postgres_db.py  session.py
app/depends/: db_depends.py  llm_depends.py  mem0_depends.py  service_depends.py
app/domain/enums/: analysis.py  document.py  experience.py  fact.py  message.py  provider.py
app/domain/models/: __init__.py  base_model.py  conversation.py  document.py  fact.py  invite.py  message.py  prompt.py  user.py  user_vacancies.py  vacancy.py  vacancy_analysis.py
app/domain/repositories/: conversations.py  documents.py  invites.py  messages.py  prompts.py  users.py
app/domain/services/: __init__.py  llm.py  memory.py
app/enum/: analysis.py  documents.py  experience.py  facts.py  messages.py  providers.py  roles.py
app/exceptions/: __init__.py  exceptions.py
app/infrastructure/database/: connection.py  dependencies.py
app/infrastructure/llms/: base.py  config.py  depends.py  factory.py  openai.py  openai_llm_service.py  tools.py
app/infrastructure/memory/: config.py  dependencies.py  depends.py  mem0_service.py
app/infrastructure/persistence/: pagination.py
app/infrastructure/security/: __init__.py  hashing.py  jwt_service.py
app/infrastructure/settings/: settings.py
app/llms/: base.py  config.py  depends.py  openai.py  tools.py
app/llms/configs/: openai.py
app/middleware/: logging.py  security_middleware.py  timing_middleware.py
app/migrations/: env.py
app/migrations/versions/: 2025_10_27_1137-47217f2b7158_initial_migration_for_postgresql.py  2025_11_12_2215-3335c46907cf_add_prompts.py  2025_11_14_1215-cf680b6320d2_add_invites_table.py  2025_11_17_2158-53b438fc023b_update_message_model_and_conversation_.py  2025_12_11_1615-38b613ee8c66_restore_invites_table.py  2026_01_08_2047-b67166532fd5_add_vacancies_table.py  2026_01_14_1637-be3ec778db76_add_missing_invites_table.py  2026_01_17_1430-3909ac0cf04f_add_pagination_indexes.py  2026_01_21_0042-6dcd7e3425e8_add_is_favorite_to_vacancies.py  (+10 more)
app/models/: __init__.py  base_model.py  conversations.py  documents.py  facts.py  invites.py  messages.py  prompts.py  user_vacancies.py  users.py  vacancies.py  vacancy_analysis.py
app/presentation/: dependencies.py
app/prompts/: prompts_base.py  prompts_for_analysis.py  prompts_for_parse.py
app/schemas/: conversations.py  coversations.py  documents.py  facts.py  invites.py  messages.py  pagination.py  prompts.py  users.py  vacancies.py  vacancy_analysis.py
app/services/: document_service.py  fact_service.py
app/static/: chat.html  index.html  st_chat.html
app/tasks/: vacancy_tasks.py
app/utils/: claude_history_converter.py  db_optimizer.py  env.py  gpt_converter.py  pagination.py  polygon.py  stream.py  user_validators.py  utils.py  utils_for_imports.py  utils_for_pagination.py
scripts/: generate_invites.py
tests/: conftest.py
tests/enum/: __init__.py  test_analysis.py
(+96 files in other folders)
